--- a/src/main/resources/static/views/interest/InterestEditForm.html
+++ b/src/main/resources/static/views/interest/InterestEditForm.html
@@ -1,63 +1,66 @@
 <div class="container" ng-init="interestForEdit()">
     <div class="row">
-        <div class="col-xs-12 col-sm-10 col-md-8 col-lg-8 col-lg-offset-2" style="margin-top: 50px;">
+        <div ng-show="error">
+            <div class="alert alert-danger">There was an error: {{error}}</div>
+        </div>
+        <div class="col-xs-12 col-sm-10 col-md-8 col-lg-8 col-lg-offset-2">
             <div class="panel-card panel-success-card">
-                <div class="text-center" style="margin-top: 6%"><h3>Edit investment interest</h3></div>
+                <div class="text-center" style="margin-top: 6%"><h3>Edit investment
+                    interest</h3>
+                </div>
                 <div class="panel-body">
-                    <div class="row">
-                        <div class="col-xs-12">
-                            <form role="form" id="interestForm">
-                                <div class="form-group-card"
-                                     ng-class="{'has-error': interest.investmentGoal.$touched&&interest.investmentGoal.$error.required , 'has-success': interest.investmentGoal.$valid}">
-                                    <label class="col-md-4 control-label" for="goal">Goal</label>
-                                    <div class="col-xs-12 col-md-8 col-lg-8" style="margin-bottom: 25px">
-                                        <input type="text" placeholder="Interest goal" ng-model="interest.investmentGoal"
-                                               ng-required="true" class="form-control input-md"
-                                               id="goal">
-                                        <span ng-show="interest.investmentGoal.$touched&&interest.investmentGoal.$error.required">Please enter goal of your investment</span>
-                                    </div>
+                    <div class="col-xs-12">
+                        <form id="interestForm" role="form" ng-submit="submit()">
+                            <input type="hidden" ng-model="interest.id">
+                            <div class="form-group">
+                                <label for="goal" class="col-md-4 control-label">Goal</label>
+                                <div class="col-xs-12 col-md-8 col-lg-8" style="margin-bottom: 25px">
+                                    <input type="text" ng-model="interest.investmentGoal"
+                                           class="form-control input-md"
+                                           id="goal" required>
                                 </div>
-                                <div class="form-group">
-                                    <label class="col-md-4 control-label" for="description">Description</label>
-                                    <div class="col-xs-12 col-md-8 col-lg-8" style="margin-bottom: 25px">
-                                            <textarea rows="7" ng-model="interest.description"
-                                                      class="form-control input-md"
-                                                      id="description">
-                                            </textarea>
-                                    </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="description" class="col-md-4 control-label">Description</label>
+                                <div class="col-xs-12 col-md-8 col-lg-8" style="margin-bottom: 25px">
+                                    <textarea style="resize: none" rows="7" ng-model="interest.description"
+                                              class="form-control input-md" id="description" required></textarea>
                                 </div>
-                                <div class="form-group" style="margin-bottom: 55px">
-                                    <label class="col-md-4 control-label" for="category">Category</label>
-                                    <div class="col-xs-12 col-md-8 col-lg-8" ng-controller="CategoryController" style="margin-bottom: 25px">
-                                        <select name="category" ng-model="interest.category"
-                                                ng-options="cat.name for cat in categories track by cat.id"
-                                                id="category">
-                                        </select>
-                                    </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="amount" class="col-md-4 control-label">Investment</label>
+                                <div class="col-xs-12 col-md-8 col-lg-8" style="margin-bottom: 25px">
+                                    <input type="text" ng-model="interest.amountInvestment"
+                                           class="form-control input-md"
+                                           id="amount" required>
                                 </div>
-                                <div class="form-group"
-                                     ng-class="{'has-error': interest.investmentGoal.$touched&&interest.investmentGoal.$error.maxlength , 'has-success': interest.amountInvestment.$valid}">
-                                    <label class="col-md-4 control-label " for="amount">Cost</label>
-                                    <div class="col-xs-12 col-md-8 col-lg-8" style="margin-bottom: 20px">
-                                        <input type="number" placeholder="Amount of investment" ng-model="interest.amountInvestment"
-                                               ng-required="true" ng-maxlength="7" class="form-control input-md"
-                                               id="amount">
-                                        <span ng-show="interest.investmentGoal.$touched&&interest.investmentGoal.$error.maxlength">Max 7 numbers.</span>
-                                    </div>
+                                <div class="form-validation"
+                                     ng-show="interest.amountInvestment.length > 10">
+                                    Not more than 10 numbers!
                                 </div>
-                                <div class="form-group text-right">
-                                    <label class="col-md-4 control-label" for="singlebutton"></label>
-                                    <div class="col-xs-12" style="margin-bottom: 5px">
-                                        <a href="#">
-                                            <button id="singlebutton" name="singlebutton" ng-click="submit()" style="width: 85px"
-                                                    class="btn btn-success">Edit
-                                            </button>
-                                        </a>
-                                        <a class="btn btn-danger" ng-href="#!/interest/my" style="width: 85px">Cancel</a>
-                                    </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="category" class="col-md-4 control-label">Category</label>
+                                <div class="col-xs-12 col-md-8 col-lg-8" style="margin-bottom: 5px"
+                                     ng-controller="CategoryController">
+                                    <select name="category" id="category" ng-model="interest.category"
+                                            ng-options="cat.name for cat in categories track by cat.id">
+                                    </select>
                                 </div>
-                            </form>
-                        </div>
+                            </div>
+
+                            <div class="form-group text-right">
+                                <label class="col-md-4 control-label" for="singlebutton"></label>
+                                <div class="col-xs-12 col-md-12 col-lg-12" style="margin-bottom: 10px">
+                                    <button id="singlebutton" class="btn btn-success" name="singlebutton" type="submit"
+                                            style="width: 85px; margin-top: 20px">
+                                        Edit
+                                    </button>
+                                    <a class="btn btn-danger" ng-href="#!/interest/my"
+                                       style="width: 85px; margin-top: 20px">Cancel</a>
+                                </div>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
