--- a/src/main/resources/static/views/interest/Add_Interest.html
+++ b/src/main/resources/static/views/interest/Add_Interest.html
@@ -10,7 +10,7 @@
                 </div>
                 <div class="panel-body">
                     <div class="col-xs-12">
-                        <form id="interestForm" role="form" ng-submit="submit()">
+                        <form name="interestForm" id="interestForm" role="form" ng-submit="submit()">
                             <input type="hidden" ng-model="interest.id">
                             <div class="form-group">
                                 <label for="goal" class="col-md-4 control-label">Goal</label>
@@ -30,22 +30,21 @@
                             <div class="form-group">
                                 <label for="amount" class="col-md-4 control-label">Investment</label>
                                 <div class="col-xs-12 col-md-8 col-lg-8" style="margin-bottom: 25px">
-                                    <input type="text" ng-model="interest.amountInvestment"
+                                    <input type="number" ng-model="interest.amountInvestment"
+                                           max="{{maxAmount}}"
                                            class="form-control input-md"
-                                           id="amount" required>
-                                </div>
-                                <div class="form-validation"
-                                     ng-show="interest.amountInvestment.length > 10">
-                                     Not more than 10 numbers!
+                                           id="amount" name="amount" required>
+                                    <!--<span class="form-validation" ng-show="interestForm.amount.$error.pattern">Not more than 8 numbers</span>-->
+                                    <!--ng-pattern="/^[\\d]{10}$/"-->
                                 </div>
                             </div>
                             <div class="form-group">
-                                <!--<label for="category" class="col-xs-3 control-label">Category:</label>-->
                                 <label for="category" class="col-md-4 control-label">Category</label>
                                 <div class="col-xs-12 col-md-8 col-lg-8" style="margin-bottom: 5px"
                                      ng-controller="CategoryController">
-                                    <select name="category" id="category" ng-model="interest.category"
+                                    <select name="category" id="category" ng-model="interest.category" required
                                             ng-options="cat.name for cat in categories track by cat.id">
+                                        <option style="display: none" value=""></option>
                                     </select>
                                 </div>
                             </div>
