--- a/src/main/resources/static/css/style-add-page-and-input.css
+++ b/src/main/resources/static/css/style-add-page-and-input.css
@@ -32,3 +32,18 @@
     top: 250px;
     left: 400px;
 }
+
+/*---------style for input field-----------*/
+
+.stylish-input-group .input-group-addon{
+    background: white !important;
+}
+.stylish-input-group .form-control{
+    border-right:0;
+    box-shadow:0 0 0;
+    border-color:#ccc;
+}
+.stylish-input-group button{
+    border:0;
+    background:transparent;
+}
