--- a/src/main/resources/static/views/main/Navbar.html
+++ b/src/main/resources/static/views/main/Navbar.html
@@ -17,6 +17,7 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="#!/about">About</a></li>
                 <li><a href="#!/projects">Projects</a></li>
+                <li><a href="#!/interest">Interests</a></li>
 
             </ul>
             <div ng-if="!authenticated">
