--- a/src/main/resources/static/views/interest/InvestorContact.html
+++ b/src/main/resources/static/views/interest/InvestorContact.html
@@ -6,13 +6,13 @@
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-xs-12 text-center">
-                            <h4><b>Our goal:</b></h4>
+                            <h4><strong>Our goal:</strong></h4>
                             <p>{{investorContact.investmentGoal}}</p>
                             <p>{{investorContact.description}}</p>
-                            <h4 class="text-left"><b> Contacts:</b></h4>
-                            <h5 style="font-size: 15px" class="text-left"><i class="fa fa-user fa-lg" aria-hidden="true"></i> Name: {{investorContact.investor.name}}  </h5>
-                            <h5 style="font-size: 15px" class="text-left"><i class="fa fa-envelope fa-lg" aria-hidden="true"></i> Email: {{investorContact.investor.email}}  </h5>
-                            <h5 style="font-size: 15px" class="text-left"><i class="fa fa-phone-square fa-lg" aria-hidden="true"></i> Phone: {{investorContact.investor.contact.phoneNumbe}}  </h5>
+                            <h4 class="text-left"><strong> Contacts:</strong></h4>
+                            <h5 style="font-size: 15px" class="text-left"><em class="fa fa-user fa-lg" aria-hidden="true"></em> Name: {{investorContact.investor.name}}  </h5>
+                            <h5 style="font-size: 15px" class="text-left"><em class="fa fa-envelope fa-lg" aria-hidden="true"></em> Email: {{investorContact.investor.email}}  </h5>
+                            <h5 style="font-size: 15px" class="text-left"><em class="fa fa-phone-square fa-lg" aria-hidden="true"></em> Phone: {{investorContact.investor.contact.phoneNumbe}}  </h5>
                             <div class="form-group centered">
                                 <label class="col-md-4" for="singlebutton"></label>
                                 <div class="col-xs-12" style="margin-bottom: 5px">
