--- a/src/main/resources/static/views/interest/MyInterests.html
+++ b/src/main/resources/static/views/interest/MyInterests.html
@@ -38,7 +38,7 @@
             </ul>
         </div>
         <div ng-if="myInterests.length === 0">
-            <p class="centered" style=" margin-top:8%"><b>You are haven't investments interests yet</b></p>
+            <p class="centered" style=" margin-top:8%"><strong>You are haven't investments interests yet</strong></p>
         </div>
     </div>
 </div>
