fixed info in About.html and README.md files

--- a/src/main/resources/static/views/main/About.html
+++ b/src/main/resources/static/views/main/About.html
@@ -36,7 +36,7 @@
         </div>
         <div class="col-lg-4 col-sm-6 text-center">
             <img class="img-circle img-responsive img-center" src="img/Igor.png" alt="">
-            <h3>Garik Privalov
+            <h3>Igor Potyomkin
             </h3>
             <p>Admin of our company</p>
         </div>
